should be final fix to alignment on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -100,7 +100,7 @@ h2.center {
 
         div.mobilealign {
             padding-right: 0px;
-			margin-right: -2px;
+			margin-right: -4px;
         }
 }
 
@@ -131,7 +131,7 @@ h2.center {
 
         div.mobilealign {
             padding-right: 0px;
-			margin-right: -3px;
+			margin-right: -4px;
         }
 }
 
